--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/node": "20.10.4",
     "@types/react": "^18.2.42",
     "eslint": "8.55.0",
-    "eslint-config-next": "14.0.4"
+    "eslint-config-next": "14.0.4",
+    "typescript": "5.3.3"
   }
 }
